Windows version added as comment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,16 @@ services:
             - 4001:8080
         volumes:
             - jenkins-data:/var/jenkins_home
-            - /var/run/docker.sock:/var/run/docker.sock
+            #- //./pipe/docker_engine:/var/run/docker.sock # Windows
+            - /var/run/docker.sock:/var/run/docker.sock # Linux
     portainer:
         image: portainer/portainer-ce
         container_name: portainer
         ports:
             - 4002:9000
         volumes:
-            - /var/run/docker.sock:/var/run/docker.sock
+            - /var/run/docker.sock:/var/run/docker.sock # Linux
+            #- //./pipe/docker_engine:/var/run/docker.sock # Windows
             - portainer-data:/data
           
 
