Removed Windows version - it works with Linux

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,14 @@ services:
             - 4001:8080
         volumes:
             - jenkins-data:/var/jenkins_home
-            #- //./pipe/docker_engine:/var/run/docker.sock # Windows
-            - /var/run/docker.sock:/var/run/docker.sock # Linux
+            - /var/run/docker.sock:/var/run/docker.sock
     portainer:
         image: portainer/portainer-ce
         container_name: portainer
         ports:
             - 4002:9000
         volumes:
-            - /var/run/docker.sock:/var/run/docker.sock # Linux
-            #- //./pipe/docker_engine:/var/run/docker.sock # Windows
+            - /var/run/docker.sock:/var/run/docker.sock
             - portainer-data:/data
           
 
